--- a/res/layout/three_line_list_item.xml
+++ b/res/layout/three_line_list_item.xml
@@ -2,7 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
+    
+    <ImageView android:id="@+id/listItemImage"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:contentDescription="@string/listitem_thumbnail"></ImageView>
+    
+    <LinearLayout
+    	android:layout_width="match_parent"
+    	android:layout_height="match_parent"
+    	android:orientation="vertical" >
     
 	    <TextView
 	        android:id="@+id/listItemFirstLine"
@@ -21,5 +31,7 @@
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:textAppearance="?android:attr/textAppearanceSmallInverse" />
+	    
+	</LinearLayout>
 
 </LinearLayout>
