--- a/res/layout/three_line_list_item.xml
+++ b/res/layout/three_line_list_item.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:layout_height="match_parent" >
     
     <ImageView android:id="@+id/listItemImage"
-        android:layout_height="0dp"
-        android:layout_width="0dp"
-        android:contentDescription="@string/listitem_thumbnail"></ImageView>
+       	android:layout_height="96dp"
+       	android:layout_width="96dp"
+       	android:contentDescription="@string/listitem_thumbnail"
+       	android:layout_alignParentLeft="true" />
     
-    <LinearLayout
-    	android:layout_width="match_parent"
-    	android:layout_height="match_parent"
-    	android:orientation="vertical" >
+    <TextView
+        android:id="@+id/listItemFirstLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLargeInverse"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/listItemImage" />
     
-	    <TextView
-	        android:id="@+id/listItemFirstLine"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:textAppearance="?android:attr/textAppearanceLargeInverse" />
-	    
-	    <TextView
-	        android:id="@+id/listItemSecondLine"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:textAppearance="?android:attr/textAppearanceMediumInverse" />
-	    
-	    <TextView
-	        android:id="@+id/listItemThirdLine"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:textAppearance="?android:attr/textAppearanceSmallInverse" />
-	    
-	</LinearLayout>
-
-</LinearLayout>
+    <TextView
+        android:id="@+id/listItemSecondLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMediumInverse"
+        android:layout_below="@id/listItemFirstLine"
+        android:layout_toRightOf="@id/listItemImage" />
+    
+    <TextView
+        android:id="@+id/listItemThirdLine"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmallInverse"
+        android:layout_below="@+id/listItemSecondLine"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@id/listItemImage" />
+    
+</RelativeLayout>
